<?xml version="1.0" encoding="utf-8"?>
<com.greenorange.gooutdoor.View.Card.Card
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/sportcard"
    app:viewcolor="@color/layout_map_data_item_card_speed_colorview_color"
    app:defaultValue="@string/layout_map_data_item_card_value_1_2"
    app:unittext1="@string/layout_map_data_item_card_value_t_2_1"
    app:unittext2="@string/layout_map_data_item_card_value_t1_2_1"
    app:titletext="@string/layout_map_data_item_card_value_v1_2_1"
    app:titlecolor="@color/layout_map_data_item_card_speed_colorview_color"
    app:subtitletext="@string/layout_map_data_item_card_value_v2_2_1"
    app:subtitlecolor="@color/layout_map_data_item_card_speed_subtitlecolor"
    android:layout_height="@dimen/layout_map_data_item_height"/>